--- a/Bsk.Solution/Bsk.Site/Bsk.Site.csproj
+++ b/Bsk.Solution/Bsk.Site/Bsk.Site.csproj
@@ -173,12 +173,10 @@
     <Content Include="Admin\img\proximaTransferencia.jpg" />
     <Content Include="Admin\lista-fornecedor.aspx" />
     <Content Include="Admin\msg.aspx" />
-    <Content Include="Anexos\Videos\video.mp4" />
+    <Content Include="Anexos\Video\video.mp4" />
     <Content Include="Cliente\avaliacao.html" />
-<<<<<<< HEAD
-=======
     <Content Include="Cliente\buscar-servico.aspx" />
->>>>>>> 3380a2ec28f3198ed7fac6c847a610847cbb12a5
+    <Content Include="Cliente\cadastro.aspx" />
     <Content Include="Cliente\cadastro.html" />
     <Content Include="Cliente\cotacaoLista.html" />
     <Content Include="Cliente\css\animate.css" />
@@ -214,7 +212,6 @@
     <Content Include="Cliente\js\sweetAlert.js" />
     <Content Include="Cliente\js\wow.js" />
     <Content Include="Cliente\liberaPagamento.html" />
-    <Content Include="Cliente\logado.html" />
     <Content Include="Cliente\login.html" />
     <Content Include="Cliente\mensagem.html" />
     <Content Include="Cliente\minhasCotacoes.html" />
@@ -446,16 +443,12 @@
     </Compile>
     <Compile Include="Admin\msg.aspx.cs">
       <DependentUpon>msg.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Admin\msg.aspx.designer.cs">
       <DependentUpon>msg.aspx</DependentUpon>
     </Compile>
     <Compile Include="App_Start\RouteConfig.cs" />
-<<<<<<< HEAD
-    <Compile Include="Cliente\default.aspx.cs">
-      <DependentUpon>default.aspx</DependentUpon>
-      <SubType>ASPXCodeBehind</SubType>
-=======
     <Compile Include="Cliente\buscar-servico.aspx.cs">
       <DependentUpon>buscar-servico.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -463,19 +456,23 @@
     <Compile Include="Cliente\buscar-servico.aspx.designer.cs">
       <DependentUpon>buscar-servico.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Cliente\cadastro.aspx.cs">
+      <DependentUpon>cadastro.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Cliente\cadastro.aspx.designer.cs">
+      <DependentUpon>cadastro.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Cliente\default.aspx.cs">
       <DependentUpon>default.aspx</DependentUpon>
->>>>>>> 3380a2ec28f3198ed7fac6c847a610847cbb12a5
+      <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Cliente\default.aspx.designer.cs">
       <DependentUpon>default.aspx</DependentUpon>
     </Compile>
     <Compile Include="Cliente\Master\Layout.Master.cs">
       <DependentUpon>Layout.Master</DependentUpon>
-<<<<<<< HEAD
       <SubType>ASPXCodeBehind</SubType>
-=======
->>>>>>> 3380a2ec28f3198ed7fac6c847a610847cbb12a5
     </Compile>
     <Compile Include="Cliente\Master\Layout.Master.designer.cs">
       <DependentUpon>Layout.Master</DependentUpon>
@@ -512,8 +509,8 @@
     <Content Include="Views\Comum\Index.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Fornecedor\Master\layout.Master" />
-    <Content Include="Anexos\Documentos\arquivo.pdf" />
-    <Content Include="Anexos\Documentos\arquivo2.pdf" />
+    <Content Include="Anexos\Documento\arquivo.pdf" />
+    <Content Include="Anexos\Documento\arquivo2.pdf" />
     <Content Include="Cliente\Master\Layout.Master" />
     <None Include="Properties\PublishProfiles\Brikk.pubxml" />
     <None Include="Web.Debug.config">
