--- a/Bsk.Solution/Bsk.Site/Web.config
+++ b/Bsk.Solution/Bsk.Site/Web.config
@@ -20,9 +20,7 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-
-    <add key="host" value="" />
-    
+    <add key="host" value="http://localhost:57642/"/>
   </appSettings>
   <connectionStrings>
     <add name="MySQLConnectionString" connectionString="Server=argos-net.nethorizontes.com.br; Port=3306; Database=bsk_brikk; Uid=AreaCompra; Pwd=Brasuka@2014;Connect Timeout=30;" />
