--- a/Bsk.Solution/Bsk.Util/Bsk.Util.csproj
+++ b/Bsk.Solution/Bsk.Util/Bsk.Util.csproj
@@ -64,6 +64,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Bsk.BE\Bsk.BE.csproj">
+      <Project>{cc33039c-6377-4460-ac2b-6dc7f6a14ce1}</Project>
+      <Name>Bsk.BE</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
