--- a/Bsk.Solution/Bsk.Site/Bsk.Site.csproj
+++ b/Bsk.Solution/Bsk.Site/Bsk.Site.csproj
@@ -260,6 +260,43 @@
     <Content Include="Cliente\Html\pagamento.html" />
     <Content Include="Cliente\Html\solicitaServico.html" />
     <Content Include="Cliente\pagamento.aspx" />
+    <Content Include="Fornecedor\Html\css\animate.css" />
+    <Content Include="Fornecedor\Html\css\bootstrap.min.css" />
+    <Content Include="Fornecedor\Html\css\datatables.min.css" />
+    <Content Include="Fornecedor\Html\css\default.css" />
+    <Content Include="Fornecedor\Html\css\master.css" />
+    <Content Include="Fornecedor\Html\css\mobile.css" />
+    <Content Include="Fornecedor\Html\img\aguardandoTransferencia.jpg" />
+    <Content Include="Fornecedor\Html\img\areasAtuacao.jpg" />
+    <Content Include="Fornecedor\Html\img\boleto.jpg" />
+    <Content Include="Fornecedor\Html\img\cartao.jpg" />
+    <Content Include="Fornecedor\Html\img\favico.png" />
+    <Content Include="Fornecedor\Html\img\finalizado.jpg" />
+    <Content Include="Fornecedor\Html\img\fundoHome.png" />
+    <Content Include="Fornecedor\Html\img\historico.jpg" />
+    <Content Include="Fornecedor\Html\img\imagem.jpg" />
+    <Content Include="Fornecedor\Html\img\liberaPagamento.jpg" />
+    <Content Include="Fornecedor\Html\img\listaCotacao.jpg" />
+    <Content Include="Fornecedor\Html\img\logo.png" />
+    <Content Include="Fornecedor\Html\img\meuSaldo.jpg" />
+    <Content Include="Fornecedor\Html\img\negociacoes.jpg" />
+    <Content Include="Fornecedor\Html\img\novaCotacao.jpg" />
+    <Content Include="Fornecedor\Html\img\pagamentoPendente.jpg" />
+    <Content Include="Fornecedor\Html\img\perfil.jpg" />
+    <Content Include="Fornecedor\Html\img\proximaTransferencia.jpg" />
+    <Content Include="Fornecedor\Html\img\servicoAndamento.jpg" />
+    <Content Include="Fornecedor\Html\img\transferido.jpg" />
+    <Content Include="Fornecedor\Html\img\upload.png" />
+    <Content Include="Fornecedor\Html\img\video.png" />
+    <Content Include="Fornecedor\Html\js\bootstrap.min.js" />
+    <Content Include="Fornecedor\Html\js\comum.js" />
+    <Content Include="Fornecedor\Html\js\datatables.min.js" />
+    <Content Include="Fornecedor\Html\js\jquery.mask.js" />
+    <Content Include="Fornecedor\Html\js\jquery.min.js" />
+    <Content Include="Fornecedor\Html\js\master.js" />
+    <Content Include="Fornecedor\Html\js\rating.js" />
+    <Content Include="Fornecedor\Html\js\sweetAlert.js" />
+    <Content Include="Fornecedor\Html\js\wow.js" />
     <Content Include="RepositoryImg\0.png" />
     <Content Include="Admin\img\servicoAndamento.jpg" />
     <Content Include="Admin\img\transferido.jpg" />
@@ -279,19 +316,19 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Site.css" />
-    <Content Include="Fornecedor\avaliacao.html" />
+    <Content Include="Fornecedor\Html\avaliacao.html" />
     <Content Include="Fornecedor\cadastro.aspx" />
-    <Content Include="Fornecedor\cadastroAtuacao.html" />
-    <Content Include="Fornecedor\comentarios.html" />
-    <Content Include="Fornecedor\cotacaoLista.html" />
+    <Content Include="Fornecedor\Html\cadastroAtuacao.html" />
+    <Content Include="Fornecedor\Html\comentarios.html" />
+    <Content Include="Fornecedor\Html\cotacaoLista.html" />
     <Content Include="Fornecedor\css\animate.css" />
     <Content Include="Fornecedor\css\bootstrap.min.css" />
     <Content Include="Fornecedor\css\datatables.min.css" />
     <Content Include="Fornecedor\css\default.css" />
     <Content Include="Fornecedor\css\master.css" />
     <Content Include="Fornecedor\css\mobile.css" />
-    <Content Include="Fornecedor\finalizado.html" />
-    <Content Include="Fornecedor\historico.html" />
+    <Content Include="Fornecedor\Html\finalizado.html" />
+    <Content Include="Fornecedor\Html\historico.html" />
     <Content Include="Fornecedor\img\aguardandoTransferencia.jpg" />
     <Content Include="Fornecedor\img\areasAtuacao.jpg" />
     <Content Include="Fornecedor\img\boleto.jpg" />
@@ -314,7 +351,7 @@
     <Content Include="Fornecedor\img\transferido.jpg" />
     <Content Include="Fornecedor\img\upload.png" />
     <Content Include="Fornecedor\img\video.png" />
-    <Content Include="Fornecedor\index.html" />
+    <Content Include="Fornecedor\Html\index.html" />
     <Content Include="Fornecedor\js\bootstrap.min.js" />
     <Content Include="Fornecedor\js\comum.js" />
     <Content Include="Fornecedor\js\datatables.min.js" />
@@ -324,14 +361,14 @@
     <Content Include="Fornecedor\js\rating.js" />
     <Content Include="Fornecedor\js\sweetAlert.js" />
     <Content Include="Fornecedor\js\wow.js" />
-    <Content Include="Fornecedor\liberaPagamento.html" />
-    <Content Include="Fornecedor\logado.html" />
-    <Content Include="Fornecedor\mensagem.html" />
-    <Content Include="Fornecedor\minhasCotacoes.html" />
-    <Content Include="Fornecedor\pagamento.html" />
-    <Content Include="Fornecedor\servicosAndamento.html" />
-    <Content Include="Fornecedor\solicitaServico.html" />
-    <Content Include="Fornecedor\_index.html" />
+    <Content Include="Fornecedor\Html\liberaPagamento.html" />
+    <Content Include="Fornecedor\Html\logado.html" />
+    <Content Include="Fornecedor\Html\mensagem.html" />
+    <Content Include="Fornecedor\Html\minhasCotacoes.html" />
+    <Content Include="Fornecedor\Html\pagamento.html" />
+    <Content Include="Fornecedor\Html\servicosAndamento.html" />
+    <Content Include="Fornecedor\Html\solicitaServico.html" />
+    <Content Include="Fornecedor\Html\_index.html" />
     <Content Include="Global.asax" />
     <Content Include="Content\bootstrap.min.css.map" />
     <Content Include="Content\bootstrap.css.map" />
