--- a/Bsk.Solution/Bsk.Site/Bsk.Site.csproj
+++ b/Bsk.Solution/Bsk.Site/Bsk.Site.csproj
@@ -222,6 +222,11 @@
     <Content Include="Cliente\Html\js\rating.js" />
     <Content Include="Cliente\Html\js\sweetAlert.js" />
     <Content Include="Cliente\Html\js\wow.js" />
+    <Content Include="Cliente\img\estrelas\1.png" />
+    <Content Include="Cliente\img\estrelas\2.png" />
+    <Content Include="Cliente\img\estrelas\3.png" />
+    <Content Include="Cliente\img\estrelas\4.png" />
+    <Content Include="Cliente\img\estrelas\5.png" />
     <Content Include="Cliente\img\Exclamation-icon.png" />
     <Content Include="Cliente\img\semImagem.jpg" />
     <Content Include="Cliente\liberar-pagamento.aspx" />
@@ -262,8 +267,10 @@
     <Content Include="Cliente\pagamento.aspx" />
     <Content Include="Fornecedor\aguardando-aceite.aspx" />
     <Content Include="Fornecedor\aguardando-pagamento.aspx" />
+    <Content Include="Fornecedor\cadastra-atuacao.aspx" />
     <Content Include="Fornecedor\cotacao-lista.aspx" />
     <Content Include="Fornecedor\default.aspx" />
+    <Content Include="Fornecedor\finalizado.aspx" />
     <Content Include="Fornecedor\Html\css\animate.css" />
     <Content Include="Fornecedor\Html\css\bootstrap.min.css" />
     <Content Include="Fornecedor\Html\css\datatables.min.css" />
@@ -301,6 +308,7 @@
     <Content Include="Fornecedor\Html\js\rating.js" />
     <Content Include="Fornecedor\Html\js\sweetAlert.js" />
     <Content Include="Fornecedor\Html\js\wow.js" />
+    <Content Include="Fornecedor\minhas-areas.aspx" />
     <Content Include="Fornecedor\minhas-cotacoes.aspx" />
     <Content Include="Fornecedor\negociar-cotacao.aspx" />
     <Content Include="RepositoryImg\0.png" />
@@ -649,6 +657,13 @@
     <Compile Include="Fornecedor\aguardando-pagamento.aspx.designer.cs">
       <DependentUpon>aguardando-pagamento.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Fornecedor\cadastra-atuacao.aspx.cs">
+      <DependentUpon>cadastra-atuacao.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Fornecedor\cadastra-atuacao.aspx.designer.cs">
+      <DependentUpon>cadastra-atuacao.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Fornecedor\cadastro.aspx.cs">
       <DependentUpon>cadastro.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -670,12 +685,26 @@
     <Compile Include="Fornecedor\default.aspx.designer.cs">
       <DependentUpon>default.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Fornecedor\finalizado.aspx.cs">
+      <DependentUpon>finalizado.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Fornecedor\finalizado.aspx.designer.cs">
+      <DependentUpon>finalizado.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Fornecedor\Master\layout.Master.cs">
       <DependentUpon>layout.Master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Fornecedor\Master\layout.Master.designer.cs">
       <DependentUpon>layout.Master</DependentUpon>
+    </Compile>
+    <Compile Include="Fornecedor\minhas-areas.aspx.cs">
+      <DependentUpon>minhas-areas.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Fornecedor\minhas-areas.aspx.designer.cs">
+      <DependentUpon>minhas-areas.aspx</DependentUpon>
     </Compile>
     <Compile Include="Fornecedor\minhas-cotacoes.aspx.cs">
       <DependentUpon>minhas-cotacoes.aspx</DependentUpon>
