Fluxo validado Harry

--- a/Bsk.Solution/Bsk.Site/Bsk.Site.csproj
+++ b/Bsk.Solution/Bsk.Site/Bsk.Site.csproj
@@ -229,22 +229,28 @@
     <Content Include="Cliente\img\estrelas\4.png" />
     <Content Include="Cliente\img\estrelas\5.png" />
     <Content Include="Cliente\img\Exclamation-icon.png" />
-    <Content Include="Cliente\img\semImagem.jpg" />
+    <Content Include="Cliente\img\status\semImagem.jpg" />
+    <Content Include="Cliente\img\status\emAndamento.jpeg" />
+    <Content Include="Cliente\img\status\buscarCotacao.jpeg" />
+    <Content Include="Cliente\img\status\finalizado.jpeg" />
+    <Content Include="Cliente\img\status\minhasAreas.jpeg" />
+    <Content Include="Cliente\img\status\aguardandoLiberacao.jpeg" />
+    <Content Include="Cliente\img\status\minhasCotacoes.jpeg" />
     <Content Include="Cliente\liberar-pagamento.aspx" />
     <Content Include="Cliente\minhas-cotacoes.aspx" />
     <Content Include="Cliente\finalizado.aspx" />
     <Content Include="Cliente\Html\finalizado.html" />
-    <Content Include="Cliente\img\aguardandoTransferencia.jpg" />
+    <Content Include="Cliente\img\status\aguardandoTransferencia.jpg" />
     <Content Include="Cliente\img\boleto.jpg" />
     <Content Include="Cliente\img\cartao.jpg" />
     <Content Include="Cliente\img\favico.png" />
     <Content Include="Cliente\img\fundoHome.png" />
-    <Content Include="Cliente\img\historico.jpg" />
+    <Content Include="Cliente\img\status\historico.jpg" />
     <Content Include="Cliente\img\imagem.jpg" />
-    <Content Include="Cliente\img\liberaPagamento.jpg" />
+    <Content Include="Cliente\img\status\liberaPagamento.jpg" />
     <Content Include="Cliente\img\listaCotacao.jpg" />
     <Content Include="Cliente\img\logo.png" />
-    <Content Include="Cliente\img\novaCotacao.jpg" />
+    <Content Include="Cliente\img\status\novaCotacao.jpg" />
     <Content Include="Cliente\img\perfil.jpg" />
     <Content Include="Cliente\img\proximaTransferencia.jpg" />
     <Content Include="Cliente\img\transferido.jpg" />
@@ -318,6 +324,17 @@
     <Content Include="Fornecedor\img\estrelas\4.png" />
     <Content Include="Fornecedor\img\estrelas\5.png" />
     <Content Include="Fornecedor\img\semImagem.jpg" />
+    <Content Include="Fornecedor\img\status\aguardandoLiberacao.jpeg" />
+    <Content Include="Fornecedor\img\status\aguardandoTransferencia.jpg" />
+    <Content Include="Fornecedor\img\status\buscarCotacao.jpeg" />
+    <Content Include="Fornecedor\img\status\emAndamento.jpeg" />
+    <Content Include="Fornecedor\img\status\finalizado.jpeg" />
+    <Content Include="Fornecedor\img\status\historico.jpg" />
+    <Content Include="Fornecedor\img\status\liberaPagamento.jpg" />
+    <Content Include="Fornecedor\img\status\minhasAreas.jpeg" />
+    <Content Include="Fornecedor\img\status\minhasCotacoes.jpeg" />
+    <Content Include="Fornecedor\img\status\novaCotacao.jpg" />
+    <Content Include="Fornecedor\img\status\semImagem.jpg" />
     <Content Include="Fornecedor\minhas-areas.aspx" />
     <Content Include="Fornecedor\minhas-cotacoes.aspx" />
     <Content Include="Fornecedor\negociar-cotacao.aspx" />
